updating theme format

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Yardstick
+Theme Name: Sustainable Tools
 Theme URI: https://yardstick.co.uk/
 Author: Digital Rockpool
 Author URI: https://digitalrockpool.com
@@ -7,7 +7,7 @@ Description: Theme for monitoring social, economic and environmental impacts
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: yardstick
+Text Domain: sustainable-tools
 
 
 # TABLE OF CONTENTS:
