--- a/lib/css/global.css
+++ b/lib/css/global.css
@@ -28,8 +28,13 @@ Typographical Elements
 
 /* # Typographical Elements
 ---------------------------------------------------------------------------------------------------- */
+html {
+	line-height: 1.15; /* 1 */
+	-webkit-text-size-adjust: 100%; /* 2 */
+}
+
 body {
-    background-attachment: fixed;
+  background-attachment: fixed;
 	background-color: #e9ecef;
 	background-position: center!important;
 	background-size: cover!important;
@@ -209,6 +214,7 @@ button:focus {
 --------------------------------------------- */
 a,
 a:visited {
+	background-color: transparent;
 	color: #ff5421;
 	outline:none;
 	text-decoration: none;
@@ -217,6 +223,7 @@ a:visited {
 a:active,
 a:focus,
 a:hover {
+	background-color: transparent;
 	color: #ce211b;
 	outline:none;
 	text-decoration: none;
